tests/paczka1/fuzzy1/43309154.err
Error in line 3: Niyu S964 71,9
Error in line 4: Niyu S297 76,6
Error in line 17: A2rI5o162mt S297 81,1
Error in line 21: Niyu S964 33,2
Error in line 35: A2rI5o162mt S458 70,1
